--- a/styles/inprogress.css
+++ b/styles/inprogress.css
@@ -1,3 +1,321 @@
+html {
+    margin: 0;
+    padding: 0;
+    height: 100%; 
+}
+
+body {
+    color: white; 
+    background-color: #B8B8B8; /* Change Color when done*/
+    min-height: 100%; 
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;  
+}
+
+
+
+/* BUTTONS */
+/* BLUE SOLID */
+.blue-solid {
+  background: #0574A3;
+  background-image: -webkit-linear-gradient(top, #0574A3, #0574A3);
+  background-image: -moz-linear-gradient(top, #0574A3, #0574A3);
+  background-image: -ms-linear-gradient(top, #0574A3, #0574A3);
+  background-image: -o-linear-gradient(top, #0574A3, #0574A3);
+  background-image: linear-gradient(to bottom, #0574A3, #0574A3);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  border-style: none;
+  color: #ffffff;
+  padding: 11px 40px 11px 40px;
+  text-decoration: none;
+}
+
+.blue-solid:hover {
+  background: #0574a3;
+  background-image: -webkit-linear-gradient(top, #0574a3, #0b9cd6);
+  background-image: -moz-linear-gradient(top, #0574a3, #0b9cd6);
+  background-image: -ms-linear-gradient(top, #0574a3, #0b9cd6);
+  background-image: -o-linear-gradient(top, #0574a3, #0b9cd6);
+  background-image: linear-gradient(to bottom, #0574a3, #0b9cd6);
+  text-decoration: none;
+}
+
+/* WHITE SOLID */
+.white-solid {
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  color: #0574A3;
+  background: #ffffff;
+  padding: 11px 40px 11px 40px;
+  text-decoration: none;
+  border-style: none;
+}
+
+.white-solid:hover {
+    color: #71C4D2;
+    background: #fff;
+}
+
+/* Green Outline */
+
+.green-clear {
+    text-decoration: none;
+    color: #16756D;
+    background-color: transparent;
+    border: 2px solid #16756D;
+    border-radius: 50px;
+    padding: 10px 40px 10px 40px;
+    margin-top: 20px;
+    transition: .3s; 
+}
+.green-clear:hover {
+    text-decoration: none;
+    color: white;
+    background-color: #16756D;
+    border: 2px solid #16756D;
+    border-radius: 50px;
+    padding: 10px 40px 10px 40px;
+}
+.green-clear:action {
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #16756D;
+    border: 2px solid #16756D;
+    border-radius: 50px;
+    padding: 10px 40px 10px 40px;
+}
+
+/* White Outline */
+
+.white-clear {
+    text-decoration: none;
+    color: white;
+    background-color: transparent;
+    border: 2px solid white;
+    border-radius: 50px;
+    padding: 10px 40px 10px 40px;
+    margin-top: 20px;
+    transition: .3s; 
+}
+.white-clear:hover {
+    text-decoration: none;
+    color: #16756D;
+    background-color: white;
+    border: 2px solid white;
+    border-radius: 50px;
+    padding: 10px 40px 10px 40px;
+}
+
+
+
+
+/* HERO */
+
+.hero {
+     position: relative; 
+     min-height: 600px;
+     background-image: url(../assets/background/hero-bg.png);
+     background-repeat: no-repeat;
+     background-position: center center;
+     background-size: cover;
+     padding-top: 100px; 
+     text-align: center;s
+     
+}
+
+.hero-title-one .hero-title-two {
+
+     letter-spacing: .35rem;
+}
+
+.hero-body {
+     padding-top: 2rem;
+     font-size: 20px;
+}
+
+
+
+/* FEATURES SECTION */
+.section-title {
+     padding-top: 3rem;
+     padding-bottom: 3rem;
+     padding-right: 1rem;
+     padding-left: 1rem;
+     font-size: 36px;
+     text-align: center;
+     color: #16756D;
+}
+
+.steps {
+     padding: 2rem;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.right {
+     float: right;
+}
+
+.left {
+     float: left;
+}
+
+.step-number {
+     font-size: 18px;
+     text-transform: uppercase;
+     padding-bottom: 2px;
+     color: #16756D;
+}
+
+.step-title {
+     font-size: 30px;
+     padding-bottom: 2px;
+}
+
+.step-description{
+
+}
+
+
+
+/* BOTH */
+.container {
+     padding-top: 2rem;
+     padding-bottom: 2rem;
+}
+
+.column {
+     width: 50%;
+}
+
+
+/* CTA SECTION */
+.cta-content {
+
+}
+
+
+/* NAVIGATION */
+
+.navbar {
+    height: 72px;
+}
+
+.logo {
+    display: inline-block;
+    float: left;
+    height: 50%;
+}
+
+.bottonnav {
+    margin-bottom: 0;
+}
+
+
+
+
+
+li {
+    
+    padding: 20px 0 20px;
+    vertical-align: right;
+}
+a:hover, a:focus, a:active {
+    color: #fff;
+    text-decoration: none;
+}
+a {
+    font-family: poppins, Helvetica;
+    text-decoration: none;
+    transition: color 0.1s, background-color 0.1s;
+}
+
+a {
+    position: relative;
+    display: block;
+    padding: 16px 0;
+    margin: 0 12px;
+    letter-spacing: 1px;
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 900;
+    text-transform: uppercase;
+    transition: color 0.1s,background-color 0.1s,padding 0.2s ease-in;
+    color: #fff;
+}
+a::before {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 3px;
+    left: 0;
+    height: 3px;
+    width: 100%;
+    background-color: #fff;
+    transform-origin: right top;
+    transform: scale(0, 1);
+    transition: color 0.1s,transform 0.2s ease-out;
+}
+a:active::before {
+    background-color: #000;
+}
+a:hover::before, a:focus::before {
+    transform-origin: left top;
+    transform: scale(1, 1);
+}
+
+
+.bottonnav{
+    position: absolute;
+    bottom: 0;
+    width: 644px;
+    height: 20px;
+    margin: 0 auto;
+    display: inline-block;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .selling-points {
 position: relative;
 display: table;
