--- a/styles/main.css
+++ b/styles/main.css
@@ -1,48 +1,283 @@
 html {
-	background-color: #F8F8F8;
-}
-
-hr { 
-    display: block;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    margin-left: auto;
-    margin-right: auto;
-    border-style: inset;
-    border-width: 1px;
-    max-width: 960px;
-    color: white;
-} 
-
-/* MENU */
-nav {
-	padding-top: 10px;
-	padding-bottom: 10px;
-}
-
-.item {
-	display: inline-block;
-}
-
-/* Hero */
-.hero {
-	text-align: center;
-}
-
-/* Title */
-.cta.section {
-	text-align: center;eeeewx
+	background-color: none;
 }
 
 .title {
 	text-align: center;
 }
 
-/* Footer */
-ul i + i {
-	padding left: 2rem;
+h3 {
+	font-weight: 400;
 }
+
+
+/* --- Dividers --- */
+hr { 
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-width: 0.5px;
+    max-width: 960px;
+    color: #FFF;
+} 
+
+.divider{
+    width:10px;
+    height:auto;
+    display:inline-block;
+}
+
+
+/* --- MENU --- */
+
+.topnav.transbox {
+	background-color: #FFF;
+	opacity: 0.6;
+}
+
+.topnav.section {
+	text-align: center;
+	padding: 0 2.5rem;
+	padding-top: 2rem;
+}
+
+
+
+.topnav img {
+	max-width: 160px;
+	float: left;
+	padding-left: 2rem;
+	padding-right: 2rem;
+}
+
+.topnav a.links {
+	font-size: 1.25rem;
+	text-transform: uppercase;
+	padding: 0 2rem;
+	text-align: center;
+	color: #FFF;
+	text-decoration: none;
+	font-weight: 400;
+	letter-spacing: 0.1rem;
+	
+}
+
+.topnav a.links:hover{
+	color: #0574A3;
+}
+
+a.links::before {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 3px;
+    left: 0;
+    height: 3px;
+    width: 100%;
+    background-color: #000;
+    transform-origin: right top;
+    transform: scale(0, 1);
+    transition: color 0.1s,transform 0.2s ease-out;
+}
+
+a.links:hover::before, a.links:focus::before {
+    transform-origin: left top;
+    transform: scale(1, 1);
+}
+
+.topnav a.button {
+	float: right;
+	padding-bottom: 1rem;
+}
+
+/* -- Topfold --*/
+.topfold {
+	background: url(../assets/background/hero-bg.png) no-repeat center;
+	background-size: cover; 
+}
+
+
+
+
+/* Hero */
+.hero {
+	text-align: center;
+	color: #FFF;
+}
+
+.hero.section {
+	padding-top: 10rem;
+	padding-bottom: 15rem;
+}
+
+.hero p {
+	font-size: 1.75rem;
+	padding-left: 12rem;
+	padding-right: 12rem;
+}
+
+
+.row.feature {
+	padding-top: 10rem;
+	padding-bottom: 10rem;
+}
+
+
+
+/* Feature 1 */
+.feature_01 h3 {
+	padding-top: 10rem;
+	color: #16756D;
+}
+
+.feature_01.section {
+	background: url(../assets/background/f1-bg.png) no-repeat center;
+	background-size: contain, cover;
+   	background-color: #FFF;
+}
+
+.feature_01.section img {
+	width: 100%;
+}
+
+
+/* Feature 2 */
+.feature_02.section {
+	background-image: url(../assets/background/f2-bg.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+   	background-color: #FFF;
+   	color: #FFF;
+}
+
+.feature_02.section img {
+	width: 90%;
+}
+
+
+
+/* Feature 3 */
+.feature_03.section {
+	background-image: url(../assets/background/f3-bg.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+   	background-color: #FFF;
+}
+
+.feature_03.section img {
+	width: 100%;
+}
+
+
+/* Feature 4 */
+.feature_04.section {
+	background-image: url(../assets/background/f4-bg-all.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+   	background-color: #FFF;
+   	color: #FFF;
+}
+
+.feature_04.section img {
+	width: 55%;
+}
+
+
+
+/* CTA */
+
+.cta.section {
+	color: #16756D;
+	text-align: center;
+	padding-top: 10rem;
+	padding-bottom: 15rem;
+	background-color: #FFF;
+	background-image: url(../assets/background/cta-bg.png);
+	background: 
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+
+
+
+/* Footer */
+.bottomnav.section {
+	padding-top: 5rem;
+}
+
+.bottomnav {
+	background-color: #0574A3;
+	text-align: center;
+	color: #FFF;
+}
+
+.two.columns.bottomnav ul {
+	text-decoration: none;
+	font-weight: 300;
+}
+
+
+.bottomnav img {
+	max-width: 160px;
+	float: left;
+}
+
+.two.columns ul li {
+	list-style-type: none;
+	font-size: 1.4rem;
+}
+
+
+.social i {
+	padding-left: 2rem;
+	float: right;
+}
+
+
 
 .copyright {
 	text-align: center;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+	color: #FFF;
+	font-size: 1rem;
 }
+
+
+@media (max-width: 1020px) {
+	.hero p {
+		
+		padding-left: 9rem;
+		padding-right: 9rem;
+	}
+}
+
+@media (max-width: 950px) {
+	.hero p {
+		font-size: 1.50rem;
+		padding-left: 6rem;
+		padding-right: 6rem;
+	}
+}
+
+@media (max-width: 750px) {
+	.hero p {
+		padding-left: 2.5rem;
+		padding-right: 2.5rem;
+	}
+}
+
+@media (max-width: 660px) {
+	.hero p {
+		padding-left: 0rem;
+		padding-right: 0rem;
+	}
+}
+
+
