--- a/styles/skeleton.css
+++ b/styles/skeleton.css
@@ -123,17 +123,26 @@ html {
 body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
-  font-weight: 400;
+  font-weight: 200;
   font-family: "Poppins", sans-serif;
   color: #222; }
 
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-h1, h2, h3, h4, h5, h6 {
+h1 {
   margin-top: 0;
   margin-bottom: 2rem;
-  font-weight: 300; }
+  font-weight: 500; 
+}
+
+h2, h3, h4, h5, h6, h7 {
+  margin-top: 0;
+  margin-bottom: 2rem;
+  font-weight: 400; 
+}
+
+
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
@@ -176,7 +185,7 @@ input[type="button"] {
   color: #FFF;
   text-align: center;
   font-size: 11px;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 38px;
   letter-spacing: .1rem;
   text-transform: uppercase;
@@ -212,7 +221,7 @@ input[type="button"] {
   color: #16756D;
   text-align: center;
   font-size: 11px;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 38px;
   letter-spacing: .1rem;
   text-transform: uppercase;
