--- a/styles/skeleton.css
+++ b/styles/skeleton.css
@@ -31,7 +31,7 @@
 .container {
   position: relative;
   width: 100%;
-  max-width: 960px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box; }
@@ -121,44 +121,57 @@ are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 62.5%; }
 body {
-  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
-  line-height: 1.6;
+  font-size: 20px; /* currently ems cause chrome bug misinterpreting rems on body element */
+  line-height: 1.8;
   font-weight: 200;
   font-family: "Poppins", sans-serif;
-  color: #222; }
+  color: #4A4A4A; }
 
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-h1 {
+h1, h4 {
   margin-top: 0;
   margin-bottom: 2rem;
   font-weight: 500; 
 }
 
-h2, h3, h4, h5, h6, h7 {
-  margin-top: 0;
-  margin-bottom: 2rem;
-  font-weight: 400; 
+h2, h3 {
+  font-weight: 600;
 }
 
+h6 {
+  font-weight: 600;
+  text-transform: uppercase;
+}
 
-h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
-h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
-h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
+h1 { font-size: 4.7rem; line-height: 1.2;  letter-spacing: -.1rem;}
+h2 { font-size: 3.4rem; line-height: 1.25; letter-spacing: -.1rem; }
+h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.05rem; }
 h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
 h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
-h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
+h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0.1rem; }
+
 
 /* Larger than phablet */
-@media (min-width: 550px) {
-  h1 { font-size: 5.0rem; }
+@media (min-width: 1125px) {
+  h1 { font-size: 7.0rem; }
   h2 { font-size: 4.2rem; }
-  h3 { font-size: 3.6rem; }
+  h3 { font-size: 3.5rem; }
   h4 { font-size: 3.0rem; }
   h5 { font-size: 2.4rem; }
   h6 { font-size: 1.5rem; }
 }
+
+@media (max-width: 1124px) and (min-width: 750px) {
+  h1 { font-size: 5.5rem; }
+  h2 { font-size: 3.4rem; }
+  h3 { font-size: 3.0rem; }
+  h4 { font-size: 2.4rem; }
+  h5 { font-size: 1.8rem; }
+  h6 { font-size: 1.5rem; }
+}
+
 
 p {
   margin-top: 0; }
@@ -174,26 +187,28 @@ a:hover {
 
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* White Outline */
 .button,
 button,
 input[type="submit"],
 input[type="reset"],
 input[type="button"] {
   display: inline-block;
-  height: 38px;
+  height: 42px;
   padding: 0 30px;
   color: #FFF;
   text-align: center;
-  font-size: 11px;
-  font-weight: 500;
-  line-height: 38px;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 42px;
   letter-spacing: .1rem;
   text-transform: uppercase;
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
   border-radius: 50px;
-  border: 1px solid #FFF;
+  border: 2px solid #FFF;
   cursor: pointer;
   box-sizing: border-box; }
 .button:hover,
@@ -207,29 +222,31 @@ input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
   color: #0574A3;
-  border-color: #0574A3;
+  background-color: #FFF;
+  border-color: #FFF;
   outline: 0; }
 
+/* Green Outline */
 .button-two,
 button,
 input[type="submit"],
 input[type="reset"],
 input[type="button"] {
   display: inline-block;
-  height: 38px;
+  height: 42px;
   padding: 0 30px;
   color: #16756D;
   text-align: center;
-  font-size: 11px;
-  font-weight: 500;
-  line-height: 38px;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 42px;
   letter-spacing: .1rem;
   text-transform: uppercase;
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
   border-radius: 50px;
-  border: 1px solid #16756D;
+  border: 2px solid #16756D;
   cursor: pointer;
   box-sizing: border-box; }
 .button-two:hover,
@@ -242,15 +259,19 @@ button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
-  color: #141517;
-  border-color: #141517;
+  color: #FFF;
+  border-color: #16756D;
+  background-color: #16756D;
   outline: 0; }
 
+/* Blue Solid */
 .button.button-primary,
 button.button-primary,
 input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
+  height: 48px;
+  line-height: 48px;
   color: #FFF;
   background-color: #0574A3;
   border-color: #0574A3; }
@@ -268,11 +289,14 @@ input[type="button"].button-primary:focus {
   background-color: #174A72;
   border-color: #174A72; }
 
+/* White Solid */
 .button.button-secondary,
 button.button-secondary,
 input[type="submit"].button-secondary,
 input[type="reset"].button-secondary,
 input[type="button"].button-secondary {
+  height: 48px;
+  line-height: 48px;
   color: #0574A3;
   background-color: #FFF;
   border-color: #FFF; }
@@ -287,8 +311,8 @@ input[type="submit"].button-secondary:focus,
 input[type="reset"].button-secondary:focus,
 input[type="button"].button-secondary:focus {
   color: #FFF;
-  background-color: #dbdbdb;
-  border-color: #dbdbdb; }
+  background-color: #D8D8D8;
+  border-color: #D8D8D8; }
 
 /* Forms
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
